--- a/src/Form/Form.css
+++ b/src/Form/Form.css
@@ -4,7 +4,7 @@
 
 .form-field {
   display: grid;
-  grid-template-columns: 10% auto;
+  grid-template-columns: 110px auto;
   grid-template-areas:
     'label input'
     'label errors';
